--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -8,17 +8,104 @@ output:
 
 ## Loading and preprocessing the data
 
+```{r, echo=TRUE}
+#loading libraries
+
+library(dplyr)
+library (ggplot2)
+
+# Unzip and pre-procesing the data
+
+filename <- "activity.zip"
+
+unzip(filename)
+
+activity<-read.csv("activity.csv", header=TRUE)
+
+head(activity)
+
+
+```
+
+
 
 
 ## What is mean total number of steps taken per day?
+
+*For this part of the assignment, you can ignore the missing values in the dataset.*
+
+*1. Calculate the total number of steps taken per day*
+
+*2. If you do not understand the difference between a histogram and a barplot, research the difference between them. Make a histogram of the total number of steps taken each day*
+
+*3. Calculate and report the mean and median of the total number of steps taken per day*
+
+**Total Steps per day**
+
+```{r, echo=TRUE}
+
+
+# create and print number of steps per day
+
+StepsByDay<-aggregate(steps~date, activity, sum)
+
+StepsByDay
+
+```
+
+**Histogram of the total number of steps taken each day**
+
+```{r, echo=TRUE, fig.width=12}
+
+hist(StepsByDay$steps, xlab="Number of Steps", ylab="Number of Days", main="Total Number of Steps by day")
+
+```
+
+**3. Calculate and report the mean and median of the total number of steps taken per day**
+```{r, echo=TRUE}
+# Mean
+meansteps<-mean(StepsByDay$steps)
+meansteps
+
+#Median
+medianSteps<-median(StepsByDay$steps)
+medianSteps
+
+```
 
 
 
 ## What is the average daily activity pattern?
 
+**1. Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)**   
+
+
+```{r, echo=TRUE}
+
+steps_by_Interval<-aggregate(steps~interval, data=activity, mean, na.rm=TRUE)
+
+g<-ggplot(steps_by_Interval, aes(interval, steps))
+
+g+geom_line(col="blue")+ggtitle("Average steps per time interval")+xlab("Time")+ylab("Steps")+theme(plot.title = element_text(face="bold", size=18))
+
+```
+
+**2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?**
+
+```{r, echo=TRUE}
+
+five_int_by_max_Steps <- steps_by_Interval[which.max(steps_by_Interval$steps),]$interval
+five_int_by_max_Steps
+
+
+```
+
+
 
 
 ## Imputing missing values
+
+
 
 
 
