--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -102,11 +102,102 @@ five_int_by_max_Steps
 
 
 
-
 ## Imputing missing values
+**1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)**  
+```{r}
+number_missing_data <- sum(is.na(activity$steps))
+number_missing_data
 
+```
+
+**2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.** 
+```{r, echo=TRUE}
+
+fill_value <- function(steps, interval) {
+    filled1 <- NA
+    if (!is.na(steps))
+        filled1<- c(steps)
+    else
+        filled1 <- (steps_by_Interval[steps_by_Interval$interval==interval, "steps"])
+    return(filled1)
+}
+
+
+
+
+```
+
+**3. New dataset that is equal to the original dataset but with the missing data filled in**   
+
+```{r, echo=TRUE}
+filled_activity <- activity
+filled_activity$steps <- mapply(fill_value, filled_activity$steps, filled_activity$interval)
+
+head(filled_activity, n=10)
+
+
+```
+**4. Make a histogram of the total number of steps taken each day** 
+
+
+```{r,echo=TRUE}
+total_steps <- tapply(filled_activity$steps, filled_activity$date, FUN=sum)
+
+hist(total_steps, xlab="Number of Steps", ylab="Frecuency", main="Total Number of Steps by day")
+```
+
+
+**4b. Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?**  
+
+```{r, echo=TRUE}
+# Mean
+mean(total_steps)
+#Median
+median(total_steps)
+
+
+#The values are different. Missing data had an  influence in the median value. 
+
+```
 
 
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+*For this part the weekdays() function may be of some help here. Use the dataset with the filled-in missing values for this part.*  
+**1. Create a new factor variable in the dataset with two levels - "weekday" and "weekend" indicating whether a given date is a weekday or weekend day.**
+
+```{r}
+weekday_or_weekend <- function(date) {
+    day <- weekdays(date)
+    if (day %in% c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday"))
+        return("weekday")
+    else if (day %in% c("Saturday", "Sunday"))
+        return("weekend")
+    else
+        stop("invalid date")
+}
+filled_activity$date <- as.Date(filled_activity$date)
+filled_activity$day <- sapply(filled_activity$date, FUN=weekday_or_weekend)
+
+
+```
+
+**2. Two time series plot of the 5-minute interval (x) and the average number of steps taken averaged across weekday days or weekend days (y).**  
+
+```{r, echo=TRUE}
+
+averages <- aggregate(steps ~ interval + day, data=filled_activity, mean)
+
+g<-ggplot(averages, aes(interval, steps)) 
+g + geom_line(col="orange") + ggtitle("Average steps per Weekend or Weekday")+facet_grid(day ~ .) +
+    xlab("5-minute interval") + ylab("Number of steps") + theme(plot.title = element_text(face="bold", size=18))
+
+
+```
+
+
+
+
+
