--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -55,9 +55,12 @@ StepsByDay
 
 **Histogram of the total number of steps taken each day**
 
-```{r, echo=TRUE, fig.width=12}
+```{r, histogram1, echo=TRUE, fig.width=12, warning=FALSE}
 
 hist(StepsByDay$steps, xlab="Number of Steps", ylab="Number of Days", main="Total Number of Steps by day")
+
+png("histogram1.png")
+
 
 ```
 
@@ -80,13 +83,16 @@ medianSteps
 **1. Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)**   
 
 
-```{r, echo=TRUE}
+```{r, timeplot1, echo=TRUE, fig.width=10, warning=FALSE}
 
 steps_by_Interval<-aggregate(steps~interval, data=activity, mean, na.rm=TRUE)
 
 g<-ggplot(steps_by_Interval, aes(interval, steps))
 
 g+geom_line(col="blue")+ggtitle("Average steps per time interval")+xlab("Time")+ylab("Steps")+theme(plot.title = element_text(face="bold", size=18))
+
+
+png("timeplot1.png")
 
 ```
 
@@ -140,10 +146,13 @@ head(filled_activity, n=10)
 **4. Make a histogram of the total number of steps taken each day** 
 
 
-```{r,echo=TRUE}
+```{r, histogram2, echo=TRUE, fig.width=12, warning=FALSE}
 total_steps <- tapply(filled_activity$steps, filled_activity$date, FUN=sum)
 
 hist(total_steps, xlab="Number of Steps", ylab="Frecuency", main="Total Number of Steps by day")
+
+
+png("histogram2.png")
 ```
 
 
@@ -186,7 +195,7 @@ filled_activity$day <- sapply(filled_activity$date, FUN=weekday_or_weekend)
 
 **2. Two time series plot of the 5-minute interval (x) and the average number of steps taken averaged across weekday days or weekend days (y).**  
 
-```{r, echo=TRUE}
+```{r echo=TRUE, fig.width=10, warning=FALSE}
 
 averages <- aggregate(steps ~ interval + day, data=filled_activity, mean)
 
@@ -194,6 +203,7 @@ g<-ggplot(averages, aes(interval, steps))
 g + geom_line(col="orange") + ggtitle("Average steps per Weekend or Weekday")+facet_grid(day ~ .) +
     xlab("5-minute interval") + ylab("Number of steps") + theme(plot.title = element_text(face="bold", size=18))
 
+png("figure2.png")
 
 ```
 
